# Kansas-Frontier-Matrix

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitnore  .pre-commit-config.yaml  ARCHITECTURE.md  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Directory Rules.md  KFM.md  KFM_LICENSE.txt  LICENSE  MANIFEST.json  Makefile  PR_DEBUG_TEST.txt  Project Dir Overview.html  Project Dir Overview.md  README.md  README.paint_floor.md  README_LAYER11_SNIPPET.md  README_LAYER12_SNIPPET.md  README_LAYER14_SNIPPET.md  README_LAYER18_SNIPPET.md  ROADMAP.md  SECURITY.md  SECURITY.md.md  SKELETON_MAP.md  baseline-report.txt  constraints.txt  docker-compose.yml  kfm_material_change_runner.py  mkdocs.yml  package.json  paint_floor.sh  pull_request_template.md  (+32 more)
.agent-tmp/: atmo-no-network-00.b64
.agent-verification/: low-cost-sensor-caveat-integrity.json
.codex/: markdown-path-audit.json  markdown-path-audit.md  markdown-path-report.md
.github/: .gitkeep  ARCHITECTURE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDABOT.yml  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  dependabot.yml  labeler.yml  labels.yml  pull_request_template_data_diff.md  release-drafter.yml
api/: Dockerfile  README.md
apps/: .gitkeep  README.md  __init__.py
apps/governed-api/: README.md  pyproject.toml
apps/governed-api/ecology/: README.md  evidencebundle_resolver.py  fastapi_routes.py  routes.py
apps/governed-api/ecology/tests/: README.md  test_evidencebundle_resolver.py  test_fastapi_routes.py  test_route_response_contract_schema.py  test_routes.py  test_runtime_envelope_compatibility.py
apps/governed-api/routes/: README.md
apps/governed-api/routes/domains/: README.md
apps/governed-api/routes/domains/archaeology/: README.md
apps/governed-api/src/: README.md
apps/governed-api/src/ai/: README.md
apps/governed-api/src/governed_api/: README.md  __init__.py  main.py  stub.py
apps/governed-api/src/governed_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
apps/governed-api/src/governed_api/routes/: README.md  __init__.py  bootstrap.py  claims_resolve.py  corrections.py  evidence.py  exports.py  focus.py  layer_descriptor.py  layer_manifest.py  layers.py  registry.py  releases.py  review_queue.py  stories.py  telemetry.py
apps/governed-api/src/governed_api/routes/domains/: agriculture.py  archaeology.py  atmosphere.py  fauna.py  flora.py  geology.py  habitat.py  hazards.py  hydrology.py  people_dna_land.py  roads_rail_trade.py  settlements_infrastructure.py  soil.py
apps/governed-api/src/routes/: README.md
apps/governed-api/src/routes/agriculture/: README.md
apps/governed-api/tests/: README.md  schema_assert.py  test_abstain_routes.py  test_boundary_guards.py
apps/governed-api/workers/src/catalog_worker/: README.md
apps/governed-api/workers/src/tile_worker/: main.py
apps/governed-api/workers/src/validate_worker/: README.md  main.py
artifacts/: README.md  runtime-proof-summary-soil-moisture.md
assurance/: README.md  assurance_spec_example.json
brand/: README.md
catalog/: README.md
configs/: .gitkeep  README.md  README_CONFIG_AUDIT.md  run_profile.json  sources.example.json
connectors/: README.md
contracts/: .gitkeep  OBJECT_MAP.md  README.md  promotion_review_handoff.md
control_plane/: README.md  authority_ladder.yaml  contradiction_register.yaml  crosswalks.yaml  deprecation_register.yaml  doctrine_artifact_provenance_sources.yaml  document_registry.yaml  document_registry_doctrine_required.yaml  domain_lane_register.yaml  normalized_summary_consumer_readiness.yaml  object_family_register.yaml  policy_gate_register.yaml  release_state_register.yaml  root_surface_register.yaml  source_authority_register.yaml  source_verification_register.yaml  verification_backlog.yaml
dashboard_templates/: README.md  dashboard.js.template  index.html.template  watchtower.css.template  watchtower.js.template  (+1 more)
data/: .gitattributes  (+5 more)
(+19946 files in other folders)
