# KFM root pyproject — greenfield scaffold.
# Sub-packages each carry their own pyproject under packages/<name>/.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kfm"
version = "0.0.0"
description = "Kansas Frontier Matrix — governed, evidence-first spatial knowledge system."
requires-python = ">=3.11"
license = { text = "TBD" }
authors = [{ name = "KFM Maintainers" }]
dependencies = [
    # Registry API used by tools/validators/_common/local_resolver.py (jsonschema >=4.18).
    "jsonschema>=4.22.0,<5",
]

[tool.kfm]
invariant = "RAW -> WORK/QUARANTINE -> PROCESSED -> CATALOG/TRIPLET -> PUBLISHED"
schema_version = "v1"
